<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="36dp"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/iv_MainLogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Id_Title"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/IdTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_MainLogo" />

    <EditText

        android:id="@+id/et_Id"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/IdHint"
        app:layout_constraintEnd_toEndOf="@+id/tv_Id_Title"
        app:layout_constraintStart_toStartOf="@+id/tv_Id_Title"
        app:layout_constraintTop_toBottomOf="@id/tv_Id_Title" />

    <TextView
        android:id="@+id/tv_Email_Title"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/EmailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Id" />

    <EditText
        android:id="@+id/et_Email"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@id/et_EmailForm"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/tv_Email_Title"
        app:layout_constraintTop_toBottomOf="@id/tv_Email_Title" />

    <EditText
        android:id="@+id/et_EmailForm"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/EmailFormHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@id/et_Email"
        app:layout_constraintEnd_toStartOf="@id/spinner"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/et_Email"
        app:layout_constraintTop_toTopOf="@id/et_Email" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/et_EmailForm"
        app:layout_constraintEnd_toEndOf="@+id/tv_Email_Title"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/et_EmailForm"
        app:layout_constraintTop_toTopOf="@id/et_EmailForm" />


    <TextView
        android:id="@+id/tv_Password_Title"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:text="@string/PasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Email" />


    <EditText
        android:id="@+id/et_Password"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/PasswordHint"

        app:layout_constraintEnd_toEndOf="@+id/tv_Password_Title"
        app:layout_constraintStart_toStartOf="@+id/tv_Password_Title"
        app:layout_constraintTop_toBottomOf="@id/tv_Password_Title" />

    <TextView
        android:id="@+id/tv_DescriptionPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="@string/passwordDescription"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/et_Password"
        app:layout_constraintStart_toStartOf="@id/et_Password"
        app:layout_constraintTop_toBottomOf="@id/et_Password" />


    <TextView
        android:id="@+id/tv_ConfirmPassword_Title"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:text="@string/ConfirmPasswordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Password" />

    <EditText
        android:id="@+id/et_ConfirmPassword"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ConfirmPasswordHint"
        app:layout_constraintEnd_toEndOf="@+id/tv_ConfirmPassword_Title"
        app:layout_constraintStart_toStartOf="@+id/tv_ConfirmPassword_Title"
        app:layout_constraintTop_toBottomOf="@id/tv_ConfirmPassword_Title" />

    <Button

        android:id="@+id/btn_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_ConfirmPassword"
        app:layout_goneMarginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>